--- a/app/page.scss
+++ b/app/page.scss
@@ -7,23 +7,21 @@ canvas {
 }
 
 .mainContents {
-  // position: absolute;
- text-align: center;
+  text-align: center;
   width: 500px;
   padding: 20px;
-  // height: 200vh;
-  // z-index: 100;
-  // justify-content: center;
-  // text-align: center;
-  // top: 30%;
-  // left: 20%;
   color: #fff;
 
-  .title {
-    position: fixed;
-    top: 30%;
-    left: 20%;
-    height: 100vh;
+    @media (max-width: 820px) {
+      h2 {
+        font-size: 22px;
+      }
+
+      p {
+        width: 250px;
+        font-size: 16px;
+      }
+    }
 
     h3 {
       letter-spacing: 1.8px;
@@ -32,7 +30,6 @@ canvas {
       font-style: normal;
       font-size: 4rem;
     }
-  }
 
 
   section {
